# Twitter-login-route-with-kafka-integration

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: dependencies.py  helpers.py  jwt_utils.py
app/kafka/: producer.py
app/models/: twitter.py
kafka_consumer/: consumer.py  database.py
